--- a/index.html
+++ b/index.html
@@ -3,39 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자산제곱 주식 피드</title>
+    <title>자산 공부용_용훈</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { background-color: #f8f9fa; font-family: 'Pretendard', sans-serif; }
-        .card { border: none; border-radius: 15px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); transition: 0.3s; }
-        .card:hover { transform: translateY(-5px); }
-        .stock-tag { background-color: #e7f3ff; color: #007bff; font-weight: bold; padding: 2px 8px; border-radius: 5px; font-size: 0.8rem; }
+        @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+        
+        body { 
+            background-color: #f0f2f5; 
+            font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, sans-serif;
+        }
+        .container { max-width: 1200px; }
+        .card { 
+            border: none; 
+            border-radius: 20px; 
+            overflow: hidden; 
+            box-shadow: 0 10px 20px rgba(0,0,0,0.08); 
+            transition: all 0.3s ease;
+            background: #fff;
+        }
+        .card:hover { transform: translateY(-7px); box-shadow: 0 15px 30px rgba(0,0,0,0.12); }
+        .card-img-top {
+            width: 100%;
+            height: auto;
+            max-height: 500px;
+            object-fit: contain; /* 이미지 비율 유지 */
+            background-color: #f8f9fa;
+            border-bottom: 1px solid #eee;
+        }
+        .card-body { padding: 1.5rem; }
+        .date-badge { 
+            font-size: 0.85rem; 
+            color: #6c757d; 
+            margin-bottom: 0.5rem; 
+            display: block;
+        }
+        .content-text { 
+            font-size: 1rem; 
+            line-height: 1.6; 
+            color: #333; 
+            white-space: pre-wrap; /* 줄바꿈 유지 */
+        }
+        .stock-tag { 
+            display: inline-block;
+            background: #e7f3ff; 
+            color: #007bff; 
+            font-weight: 700; 
+            padding: 4px 12px; 
+            border-radius: 8px; 
+            font-size: 0.75rem;
+            margin-bottom: 1rem;
+        }
+        header { padding: 60px 0 40px; }
+        h2 { font-weight: 800; color: #1a1a1a; letter-spacing: -1px; }
     </style>
 </head>
 <body>
-    <div class="container py-5">
-        <h2 class="text-center mb-5 fw-bold">📈 자산제곱 주식 정보</h2>
+
+    <header class="text-center">
+        <div class="container">
+            <h2>📈 주식 주도섹터 피드</h2>
+            <p class="text-muted">실시간 텔레그램 정보 수집 대시보드</p>
+        </div>
+    </header>
+
+    <div class="container pb-5">
         <div id="feed-container" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             </div>
     </div>
+
     <script>
+        // data.json 파일을 읽어와서 카드를 만듭니다.
         fetch('data.json')
             .then(response => response.json())
             .then(data => {
                 const container = document.getElementById('feed-container');
+                // 최신글이 위로 오게 뒤집기
                 data.reverse().forEach(item => {
+                    // 이미지가 있으면 <img> 태그 생성, 없으면 빈칸
+                    const imageHtml = item.image 
+                        ? `<img src="${item.image}" class="card-img-top" alt="주식 정보 이미지" onerror="this.style.display='none'">` 
+                        : "";
+                    
                     const card = `
                         <div class="col">
-                            <div class="card h-100 p-3">
-                                <div class="mb-2"><span class="stock-tag">#주식정보</span></div>
-                                <h5 class="fw-bold text-primary">${item.date}</h5>
-                                <p class="text-dark" style="white-space: pre-wrap;">${item.content}</p>
+                            <div class="card h-100">
+                                ${imageHtml}
+                                <div class="card-body">
+                                    <span class="stock-tag">#실시간수집</span>
+                                    <span class="date-badge">🕒 ${item.date}</span>
+                                    <p class="content-text">${item.content}</p>
+                                </div>
                             </div>
                         </div>
                     `;
                     container.innerHTML += card;
                 });
-            }).catch(e => console.log("데이터를 기다리는 중..."));
+            })
+            .catch(e => {
+                console.log("데이터를 불러오는 중입니다...");
+                document.getElementById('feed-container').innerHTML = `
+                    <div class="col-12 text-center py-5">
+                        <p class="text-muted text-center">아직 수집된 데이터가 없거나 데이터를 불러오는 중입니다.</p>
+                    </div>
+                `;
+            });
     </script>
 </body>
 </html>
