--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <header class="text-center">
         <div class="container">
-            <h2>📈 주식 주도섹터 피드</h2>
+            <h2>📈 자산공부용_yh</h2>
             <p class="text-muted">실시간 텔레그램 정보 수집 대시보드</p>
         </div>
     </header>
