1Update index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <header class="text-center">
         <div class="container">
             <h2>📈 자산공부용_yh</h2>
-            <p class="text-muted">실시간 텔레그램 정보 수집 대시보드</p>
+            <p class="text-muted">정보모음</p>
         </div>
     </header>
 
