--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             width: 100%;
             height: auto;
             max-height: 500px;
-            object-fit: contain; /* 이미지 비율 유지 */
+            object-fit: contain;
             background-color: #f8f9fa;
             border-bottom: 1px solid #eee;
         }
@@ -41,7 +41,7 @@
             font-size: 1rem; 
             line-height: 1.6; 
             color: #333; 
-            white-space: pre-wrap; /* 줄바꿈 유지 */
+            white-space: pre-wrap;
         }
         .stock-tag { 
             display: inline-block;
@@ -72,14 +72,22 @@
     </div>
 
     <script>
-        // data.json 파일을 읽어와서 카드를 만듭니다.
-        fetch('data.json')
+        // 캐시 방지를 위해 파일명 뒤에 랜덤 숫자를 붙여서 불러옵니다.
+        const dataUrl = 'data.json?v=' + new Date().getTime();
+
+        fetch(dataUrl)
             .then(response => response.json())
             .then(data => {
                 const container = document.getElementById('feed-container');
+                container.innerHTML = ''; // 기존 내용 비우기
+
+                if (data.length === 0) {
+                    container.innerHTML = '<div class="col-12 text-center py-5"><p class="text-muted">아직 수집된 데이터가 없습니다.</p></div>';
+                    return;
+                }
+
                 // 최신글이 위로 오게 뒤집기
                 data.reverse().forEach(item => {
-                    // 이미지가 있으면 <img> 태그 생성, 없으면 빈칸
                     const imageHtml = item.image 
                         ? `<img src="${item.image}" class="card-img-top" alt="주식 정보 이미지" onerror="this.style.display='none'">` 
                         : "";
@@ -100,10 +108,10 @@
                 });
             })
             .catch(e => {
-                console.log("데이터를 불러오는 중입니다...");
+                console.error("데이터 로드 실패:", e);
                 document.getElementById('feed-container').innerHTML = `
                     <div class="col-12 text-center py-5">
-                        <p class="text-muted text-center">아직 수집된 데이터가 없거나 데이터를 불러오는 중입니다.</p>
+                        <p class="text-danger">데이터를 불러오는 중 오류가 발생했습니다. (data.json 파일 확인 필요)</p>
                     </div>
                 `;
             });
